# Modularity

./: README.md
cmake/: CMakeLists.txt  binName.txt
include/: argsParser.hpp  cpu.hpp  macros.hpp  mem.hpp  notifications.hpp
scripts/bash/: debugBuild.sh  dependencies.sh  generate.sh  getAbsolutePath.sh  releaseBuild.sh  runDebug.sh  runRelease.sh
src/: argsParser.cpp  cpu.cpp  main.cpp  mem.cpp  notifications.cpp
